Fix styling on mobile part 1

--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,7 @@
   --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   --line: 1px solid var(--color-grey-light-2); }
 
-*,
-*::before,
-*::after {
+* {
   margin: 0;
   padding: 0; }
 
@@ -29,23 +27,29 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%; }
+  @media only screen and (max-width: 68.75rem) {
+    html {
+      font-size: 50%; } }
 
 body {
-  color: var(--color-grey-dark-2);
-  font-family: 'Open Sans', Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.6;
+  color: var(--color-grey-dark-2);
   background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh; }
 
 .container {
-  max-width: 120rem;
   margin: 8rem auto;
   background-color: var(--color-grey-light-2);
   box-shadow: var(--shadow-dark);
-  min-height: 50rem; }
+  min-height: 50rem;
+  width: 80%; }
+  @media only screen and (max-width: 75rem) {
+    .container {
+      margin: 0; } }
 
 .header {
   font-size: 1.4rem;
