--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -19,31 +19,41 @@
   --shadow-light: 0 2rem 5rem rgba(0,0,0, 0.06);
   --line: 1px solid var(--color-grey-light-2);
 }
-*,
-*::before,
-*::after {
-  margin:0;
-  padding:0;
+
+
+// MEDIA QUERY VARIABLES
+
+$bp-largest: 75rem; //1200px
+$bp-large: 68.75rem; //1100px
+
+* {
+  margin: 0;
+  padding: 0;
 }
 
 *,
 *::before,
 *::after {
-  box-sizing:inherit;
+  box-sizing: inherit;
 }
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+
+  @media only screen and (max-width: $bp-large) {
+      font-size: 50%;
+  }
 }
 
-body{
-  color: var(--color-grey-dark-2);
-  font-family: 'Open Sans', Arial, sans-serif;
+body {
+  font-family: 'Open Sans', sans-serif;
   font-weight: 400;
   line-height: 1.6;
-  background-image: linear-gradient(to right bottom, var(--color-primary-light),var(--color-primary-dark));
+  color: var(--color-grey-dark-2);
+  background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
+
   min-height: 100vh;
 }
