--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,9 +1,14 @@
 .container{
-  max-width: 120rem;
+  // max-width: 120rem;
   margin: 8rem auto;
   background-color: var(--color-grey-light-2);
   box-shadow: var(--shadow-dark);
   min-height: 50rem;
+  width: 80%;
+
+  @media only screen and (max-width:$bp-largest){
+    margin: 0;
+  }
 }
 
 .header{
